# FFTLib

./: .gitignore  CMakeLists.txt
include/: Complex.h  FFT.h
include/impl/: FFT_impl.h
src/: CMakeLists.txt  FFT.cpp  FFT_impl.cpp
tests/: CMakeLists.txt  fft_tests.cpp
